--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/addQuestion.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/addQuestion.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import org.controlsfx.control.CheckComboBox?>
 
 <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="332.66666666667" prefWidth="500.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.AddQuestion">
    <children>
@@ -18,6 +19,7 @@
                   <Insets top="10.0" />
                </VBox.margin>
             </ComboBox>
+            <CheckComboBox fx:id="courseCMB" onDragDetected="#selectCourse" prefHeight="25.0" prefWidth="151.0" />
             <TextField fx:id="idTF" prefHeight="25.0" prefWidth="171.0" />
             <TextField fx:id="questionTF" layoutX="10.0" layoutY="254.0" />
             <TextField fx:id="firstTF" promptText="1">
@@ -45,11 +47,6 @@
                   <Insets />
                </VBox.margin>
             </TextField>
-            <TextField fx:id="pointsTF" layoutX="10.0" layoutY="233.0">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-            </TextField>
          </children>
       </VBox>
       <VBox layoutY="25.0" prefHeight="308.0" prefWidth="119.0" spacing="7.0">
@@ -61,6 +58,11 @@
                <VBox.margin>
                   <Insets top="10.0" />
                </VBox.margin>
+            </Label>
+            <Label alignment="CENTER" layoutX="10.0" layoutY="225.0" prefHeight="25.0" prefWidth="135.0" text="Course">
+               <font>
+                  <Font size="15.0" />
+               </font>
             </Label>
             <Label alignment="CENTER" prefHeight="25.0" prefWidth="135.0" text="Question ID">
                <font>
@@ -87,11 +89,6 @@
                <VBox.margin>
                   <Insets top="97.0" />
                </VBox.margin>
-            </Label>
-            <Label alignment="CENTER" layoutX="10.0" layoutY="225.0" prefHeight="25.0" prefWidth="135.0" text="Points">
-               <font>
-                  <Font size="15.0" />
-               </font>
             </Label>
          </children>
       </VBox>
