--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/addQuestion.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/addQuestion.fxml
@@ -12,14 +12,14 @@
 
 <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="332.66666666667" prefWidth="500.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.AddQuestion">
    <children>
-      <VBox layoutX="115.0" layoutY="25.0" prefHeight="308.0" prefWidth="304.0" spacing="7.0">
+      <VBox layoutX="115.0" layoutY="25.0" prefHeight="308.0" prefWidth="229.0" spacing="7.0">
          <children>
             <ComboBox fx:id="subjectCMB" onAction="#selectSubject" prefWidth="150.0">
                <VBox.margin>
                   <Insets top="10.0" />
                </VBox.margin>
             </ComboBox>
-            <CheckComboBox fx:id="courseCMB" onDragDetected="#selectCourse" prefHeight="25.0" prefWidth="151.0" />
+            <CheckComboBox fx:id="courseCMB" prefHeight="25.0" prefWidth="233.0" />
             <TextField fx:id="idTF" prefHeight="25.0" prefWidth="171.0" promptText="3 digits" />
             <TextField fx:id="questionTF" layoutX="10.0" layoutY="254.0" />
             <TextField fx:id="firstTF" promptText="1">
@@ -92,7 +92,7 @@
             </Label>
          </children>
       </VBox>
-      <Button fx:id="doneBTN" alignment="CENTER" contentDisplay="CENTER" layoutX="441.0" layoutY="153.0" mnemonicParsing="false" onAction="#done" style="-fx-background-color: #70879d;" text="Done" textFill="WHITE">
+      <Button fx:id="doneBTN" alignment="CENTER" contentDisplay="CENTER" layoutX="392.0" layoutY="284.0" mnemonicParsing="false" onAction="#done" prefWidth="94.0" style="-fx-background-color: #70879d;" text="Add Question" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
@@ -102,5 +102,10 @@
             <Font name="System Bold" size="17.0" />
          </font>
       </Label>
+      <Button layoutX="351.0" layoutY="67.0" mnemonicParsing="false" onAction="#selectCourse" prefHeight="25.0" prefWidth="35.0" style="-fx-background-color: #70879d;" text="OK" textFill="WHITE">
+         <font>
+            <Font size="9.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
