--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/principalPage.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/principalPage.fxml
@@ -9,13 +9,13 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="teacherPage" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.TeacherPage">
+<AnchorPane fx:id="teacherPage" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.PrincipalPage">
    <children>
       <BorderPane fx:id="BorderPane" prefHeight="400.0" prefWidth="600.0">
          <left>
             <VBox fx:id="Menu" prefHeight="200.0" prefWidth="100.0" spacing="15.0" style="-fx-background-color: #9dbcdb;" BorderPane.alignment="CENTER">
                <children>
-                  <Button fx:id="addQuestionBtn" mnemonicParsing="false" onAction="#AddQuestionEvent" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: #9dbcdb;" text="Add Question" textFill="WHITE">
+                  <Button fx:id="ApproveBtn" mnemonicParsing="false" onAction="#ApproveRequestsEvent" prefHeight="46.0" prefWidth="100.0" style="-fx-background-color: #9dbcdb;" text="Approve Requests" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -23,22 +23,22 @@
                         <Insets top="5.0" />
                      </VBox.margin>
                   </Button>
-                  <Button fx:id="buildExamBtn" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#CreateExamEvent" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: #9dbcdb;" text="Build Exam" textFill="WHITE">
+                  <Button fx:id="ViewGradesBtn" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: #9dbcdb;" text="View Grades" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Button fx:id="checkGradesBtn" layoutX="10.0" layoutY="45.0" mnemonicParsing="false" onAction="#CheckGradesBtn" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: #9dbcdb;" text="Check Grades" textFill="WHITE">
+                  <Button fx:id="ViewExamsBtn" layoutX="10.0" layoutY="45.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: #9dbcdb;" text="View Exams" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Button fx:id="requestTimeBtn" layoutX="10.0" layoutY="81.0" mnemonicParsing="false" onAction="#RequestTimeEvent" prefHeight="60.0" prefWidth="100.0" style="-fx-background-color: #9dbcdb;" text="Request Extra Time" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                  <Button fx:id="ViewQuestionsBtn" layoutX="10.0" layoutY="81.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="100.0" style="-fx-background-color: #9dbcdb;" text="View Questions" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Button fx:id="logOutBtn" layoutX="10.0" layoutY="167.0" mnemonicParsing="false" onAction="#LogOut" prefHeight="40.0" prefWidth="100.0" style="-fx-background-color: #9dbcdb;" text="Log Out" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                  <Button fx:id="logOutBtn" layoutX="10.0" layoutY="178.0" mnemonicParsing="false" onAction="#LogOut" prefHeight="37.0" prefWidth="100.0" style="-fx-background-color: #9dbcdb;" text="Log Out" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -49,7 +49,7 @@
          <top>
             <HBox fx:id="Title" prefHeight="67.0" prefWidth="600.0" style="-fx-background-color: #8DA9C5;" BorderPane.alignment="CENTER">
                <children>
-                  <Label fx:id="pageLbl" text="Teacher's Page" textFill="WHITE">
+                  <Label fx:id="pageLbl" text="Principal's Page" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="31.0" />
                      </font>
