--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/login.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/login.fxml
@@ -3,9 +3,8 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
@@ -14,7 +13,7 @@
     <children>
         <HBox fx:id="loginHbox" prefHeight="67.0" prefWidth="600.0" style="-fx-background-color: #8DA9C5;">
             <children>
-                <Label fx:id="loginLbl" alignment="CENTER" contentDisplay="CENTER" text="Log in" textFill="WHITE">
+                <Label fx:id="loginLbl" alignment="CENTER" contentDisplay="CENTER" text="Login" textFill="WHITE">
                     <font>
                         <Font name="System Bold" size="31.0" />
                     </font>
@@ -39,15 +38,11 @@
                 <Font size="20.0" />
             </font>
         </TextField>
-        <TextField fx:id="passwordTxt" layoutX="213.0" layoutY="227.0">
-            <font>
-                <Font size="20.0" />
-            </font>
-        </TextField>
-        <Button fx:id="loginBtn" layoutX="472.0" layoutY="292.0" mnemonicParsing="false" onAction="#checkLogin" style="-fx-background-color: #70879d;" text="Log in" textFill="WHITE">
+        <Button fx:id="loginBtn" layoutX="472.0" layoutY="292.0" mnemonicParsing="false" onAction="#checkLogin" style="-fx-background-color: #70879d;" text="Login" textFill="WHITE">
             <font>
                 <Font name="System Bold Italic" size="14.0" />
             </font>
         </Button>
+      <PasswordField fx:id="passwordTxt" layoutX="212.0" layoutY="227.0" prefHeight="43.0" prefWidth="249.0" />
     </children>
 </AnchorPane>
