ayleen + assal merge is done! aseel added most of his code

--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/buildExam.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/buildExam.fxml
@@ -25,18 +25,19 @@
       <TextField fx:id="idTF" layoutX="14.0" layoutY="99.0" onAction="#setID" prefHeight="25.0" prefWidth="118.0" promptText="Exam ID (2 digits)" />
       <TextField fx:id="timeTF" layoutX="14.0" layoutY="131.0" onAction="#setTime" prefHeight="25.0" prefWidth="118.0" promptText="Time" />
       <ComboBox fx:id="courseCMB" layoutX="14.0" layoutY="66.0" onAction="#selectCourse" prefHeight="25.0" prefWidth="118.0" promptText="Course" />
-      <TextField fx:id="pointsTF" layoutX="38.0" layoutY="213.0" onAction="#points" prefHeight="25.0" prefWidth="52.0" promptText="Points" />
-      <Button fx:id="addBTN" layoutX="48.0" layoutY="245.0" mnemonicParsing="false" onAction="#addQuestion" style="-fx-background-color: #70879d;" text="ADD" textFill="WHITE">
+      <TextField fx:id="pointsTF" layoutX="38.0" layoutY="234.0" onAction="#points" prefHeight="25.0" prefWidth="52.0" promptText="Points" />
+      <Button fx:id="addBTN" layoutX="48.0" layoutY="266.0" mnemonicParsing="false" onAction="#addQuestion" style="-fx-background-color: #70879d;" text="ADD" textFill="WHITE">
          <font>
             <Font name="System Bold" size="9.0" />
          </font>
       </Button>
       <TextField fx:id="totalTF" editable="false" layoutX="86.0" layoutY="293.0" prefHeight="25.0" prefWidth="46.0" />
-      <Button fx:id="clearBTN" layoutX="16.0" layoutY="167.0" mnemonicParsing="false" onAction="#clearPressed" style="-fx-background-color: #70879d;" text="Clear" textFill="WHITE">
+      <Button fx:id="clearBTN" layoutX="42.0" layoutY="192.0" mnemonicParsing="false" onAction="#clearPressed" style="-fx-background-color: #70879d;" text="Clear" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
       <Label layoutX="19.0" layoutY="297.0" text="Points Left:" />
+      <TextField fx:id="digitcode" layoutX="14.0" layoutY="162.0" onAction="#setTime" prefHeight="25.0" prefWidth="118.0" promptText="4-digit code" />
    </children>
 </AnchorPane>
