--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/addQuestion.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/addQuestion.fxml
@@ -8,17 +8,19 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import org.controlsfx.control.CheckComboBox?>
 
-<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="332.66666666667" prefWidth="500.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.AddQuestion">
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="332.66666666667" prefWidth="500.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.AddQuestion">
    <children>
-      <VBox layoutX="115.0" layoutY="25.0" prefHeight="308.0" prefWidth="304.0" spacing="7.0">
+      <VBox layoutX="115.0" layoutY="25.0" prefHeight="308.0" prefWidth="229.0" spacing="7.0">
          <children>
-            <ComboBox fx:id="subjectCMB" prefWidth="150.0">
+            <ComboBox fx:id="subjectCMB" onAction="#selectSubject" prefWidth="150.0">
                <VBox.margin>
                   <Insets top="10.0" />
                </VBox.margin>
             </ComboBox>
-            <TextField fx:id="idTF" prefHeight="25.0" prefWidth="171.0" />
+            <CheckComboBox fx:id="courseCMB" prefHeight="25.0" prefWidth="233.0" />
+            <TextField fx:id="idTF" prefHeight="25.0" prefWidth="171.0" promptText="3 digits" />
             <TextField fx:id="questionTF" layoutX="10.0" layoutY="254.0" />
             <TextField fx:id="firstTF" promptText="1">
                <VBox.margin>
@@ -45,11 +47,6 @@
                   <Insets />
                </VBox.margin>
             </TextField>
-            <TextField fx:id="pointsTF" layoutX="10.0" layoutY="233.0" >
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-            </TextField>
          </children>
       </VBox>
       <VBox layoutY="25.0" prefHeight="308.0" prefWidth="119.0" spacing="7.0">
@@ -61,6 +58,11 @@
                <VBox.margin>
                   <Insets top="10.0" />
                </VBox.margin>
+            </Label>
+            <Label alignment="CENTER" layoutX="10.0" layoutY="225.0" prefHeight="25.0" prefWidth="135.0" text="Course">
+               <font>
+                  <Font size="15.0" />
+               </font>
             </Label>
             <Label alignment="CENTER" prefHeight="25.0" prefWidth="135.0" text="Question ID">
                <font>
@@ -88,14 +90,9 @@
                   <Insets top="97.0" />
                </VBox.margin>
             </Label>
-            <Label alignment="CENTER" layoutX="10.0" layoutY="225.0" prefHeight="25.0" prefWidth="135.0" text="Points">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Label>
          </children>
       </VBox>
-      <Button fx:id="doneBTN" alignment="CENTER" contentDisplay="CENTER" layoutX="441.0" layoutY="153.0" mnemonicParsing="false" onAction="#done" style="-fx-background-color: #70879d;" text="Done" textFill="WHITE">
+      <Button fx:id="doneBTN" alignment="CENTER" contentDisplay="CENTER" layoutX="392.0" layoutY="284.0" mnemonicParsing="false" onAction="#done" prefWidth="94.0" style="-fx-background-color: #70879d;" text="Add Question" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
@@ -105,5 +102,10 @@
             <Font name="System Bold" size="17.0" />
          </font>
       </Label>
+      <Button layoutX="351.0" layoutY="67.0" mnemonicParsing="false" onAction="#selectCourse" prefHeight="25.0" prefWidth="42.0" style="-fx-background-color: #70879d;" text="Update" textFill="WHITE">
+         <font>
+            <Font size="9.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
