--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/freeText.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/freeText.fxml
@@ -5,19 +5,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="332.666666667" prefWidth="500.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.FreeText">
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="353.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.FreeText">
     <children>
-        <Label alignment="CENTER" prefHeight="26.0" prefWidth="500.0" style="-fx-background-color: #70879d;" text="About Exam" textFill="WHITE">
+        <Button fx:id="doneBTN" layoutX="142.0" layoutY="299.0" mnemonicParsing="false" onAction="#done" style="-fx-background-color: #70879d;" text="Done" textFill="WHITE">
             <font>
-                <Font name="System Bold" size="17.0" />
-            </font>
-        </Label>
-        <Button fx:id="doneBTN" layoutX="434.0" layoutY="278.0" mnemonicParsing="false" onAction="#done" style="-fx-background-color: #70879d;" text="Done" textFill="WHITE">
-            <font>
-                <Font name="System Bold" size="12.0" />
+                <Font name="System Bold Italic" size="12.0" />
             </font>
         </Button>
-        <Label layoutX="33.0" layoutY="51.0" prefHeight="34.0" prefWidth="118.0" text="FreeText Teacher:" />
-        <Label fx:id="freeTextTeacher" alignment="TOP_LEFT" layoutX="152.0" layoutY="60.0" prefHeight="218.0" prefWidth="282.0" text="No text written" textAlignment="CENTER" />
+        <Label layoutX="24.0" layoutY="14.0" prefHeight="34.0" prefWidth="176.0" style="-fx-font-family: 'Arial Black';" text="Notes from the teacher:" />
+        <Label fx:id="freeTextTeacher" alignment="TOP_LEFT" layoutX="24.0" layoutY="60.0" prefHeight="218.0" prefWidth="282.0" style="-fx-font-family: 'Arial Black';" text="No text written" textAlignment="CENTER" />
     </children>
 </AnchorPane>
