--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/studentsPage.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/studentsPage.fxml
@@ -2,20 +2,18 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.StudentsPage">
+<AnchorPane prefHeight="420.0" prefWidth="700.0" style="-fx-background-image: url('images/back.jpg')" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.StudentsPage">
     <children>
-        <BorderPane fx:id="BorderPane" prefHeight="400.0" prefWidth="600.0">
+        <BorderPane fx:id="BorderPane" prefHeight="420.0" prefWidth="700.0">
             <left>
-                <VBox fx:id="Menu" prefHeight="200.0" prefWidth="100.0" spacing="15.0" style="-fx-background-color: #9dbcdb;" BorderPane.alignment="CENTER">
+                <VBox fx:id="Menu" prefHeight="200.0" prefWidth="100.0" spacing="15.0" visible="false" BorderPane.alignment="CENTER" style="-fx-border-color: white; -fx-border-width: 5px;">
                     <children>
-                        <Button fx:id="doExamBtn" mnemonicParsing="false" onAction="#DoExamAction" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: #9dbcdb;" text="Do Exam" textFill="WHITE">
+                        <Button fx:id="doExamBtn" mnemonicParsing="false" onAction="#DoExamAction" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: transparent;" text="Do Exam" textFill="WHITE">
                             <font>
                                 <Font name="System Bold" size="12.0" />
                             </font>
@@ -23,7 +21,7 @@
                                 <Insets top="5.0" />
                             </VBox.margin>
                         </Button>
-                        <Button fx:id="logOutBtn" mnemonicParsing="false" onAction="#LogOutEvent" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: #9dbcdb;" text="Log Out" textFill="WHITE">
+                        <Button fx:id="logOutBtn" mnemonicParsing="false" onAction="#LogOutEvent" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: trasparent;" text="Log Out" textFill="WHITE">
                             <font>
                                 <Font name="System Bold" size="12.0" />
                             </font>
@@ -31,23 +29,14 @@
                     </children>
                 </VBox>
             </left>
-            <top>
-                <HBox fx:id="Title" prefHeight="67.0" prefWidth="600.0" style="-fx-background-color: #8DA9C5;" BorderPane.alignment="CENTER">
-                    <children>
-                        <Label fx:id="pageStudentLbl" text="Student's Page" textFill="WHITE">
-                            <font>
-                                <Font name="System Bold" size="31.0" />
-                            </font>
-                            <HBox.margin>
-                                <Insets left="200.0" top="10.0" />
-                            </HBox.margin>
-                        </Label>
-                    </children>
-                </HBox>
-            </top>
             <center>
                 <VBox fx:id="detailVBox" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
             </center>
         </BorderPane>
+      <Button fx:id="menuBtn" mnemonicParsing="false" onAction="#OpenMenu" style="-fx-background-color: transparent; -fx-border-color: white;" text="Menu" textFill="WHITE">
+         <font>
+            <Font name="System Bold Italic" size="15.0" />
+         </font>
+      </Button>
     </children>
 </AnchorPane>
