--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/viewGradesPrincipal.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/viewGradesPrincipal.fxml
@@ -34,5 +34,11 @@
                 <TableColumn fx:id="gradeCol" editable="false" prefWidth="48.666656494140625" text="Grade" />
             </columns>
         </TableView>
+      <Label layoutX="14.0" layoutY="85.0" text="Author:">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <TextField fx:id="authorTF" editable="false" layoutX="73.0" layoutY="83.0" prefHeight="25.0" prefWidth="83.0" />
     </children>
 </AnchorPane>
